--- a/package.json
+++ b/package.json
@@ -13,8 +13,11 @@
   "license": "MIT",
   "dependencies": {
     "axios": "^0.26.0",
+    "bootstrap": "^5.1.3",
+    "ejs": "^3.1.6",
     "express": "^4.17.3",
     "express-http-proxy": "^1.6.3",
+    "jquery": "^3.6.0",
     "node-cache": "^5.1.2",
     "node-schedule": "^2.1.0"
   }
